fixed reso on imgs and some minor alignments on batte page

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,9 @@ body {
   border:3px solid black;
   border-radius: 4px;
 }
+button {
+  cursor: pointer;
+}
 /*******************
 choose character page
 *******************/
@@ -69,12 +72,12 @@ battle page
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-left: 10%;
+  margin-left: 3%;
   padding-top: 20px;
 }
 .right-align {
   text-align: right;
-  margin-right: 10%;
+  margin-right: 3%;
 }
 #cpu-health-bar {
   margin-left: 60%;
@@ -95,19 +98,18 @@ battle page
   text-shadow: 0 0 4px #ccc, 0 -5px 4px #ff3, 2px -10px 6px #fd3, -2px -15px 11px #f80, 2px -18px 18px #f20;
   outline:none;
 }
-.player, .cpu {
-  margin-top: 50%;
-}
+
 .player {
-  margin-left: 30px;
+  margin-top: 25%;
+}
+.cpu {
+  margin-top: 25%;
 }
 .player-info, .cpu-info {
   color: #000;
   text-shadow: 0 0 4px #ccc, 0 -5px 4px #ff3, 2px -10px 6px #fd3, -2px -15px 11px #f80, 2px -18px 18px #f20;
 }
-.player-info {
-  margin-left: 10%;
-}
+
 progress[value] {
   -webkit-appearance: none;
    appearance: none;
@@ -178,9 +180,9 @@ progress[value]::-webkit-progress-value {
   animation-iteration-count: 1;
 }
 .grow {
-  -webkit-transform: scale(3);
-  -ms-transform: scale(3);
-  transform: scale(3);
+  -webkit-transform: scale(2);
+  -ms-transform: scale(2);
+  transform: scale(2);
   -webkit-animation: r-swing .75s ease-out;
   animation: r-swing .75s ease-out;
   -webkit-animation-iteration-count: 1;
